--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -4,6 +4,7 @@ pytest-flask>=1.3.0
 pytest-mock>=3.11.0
 pytest-cov>=4.1.0
 nox>=2023.4.22
+pytest-blockage>=0.2.4
 
 # E2E Testing
 playwright>=1.40.0
