--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.13"
-    
+
+    - name: Install system dependencies for pybluez
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          bluetooth libbluetooth-dev
+
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
@@ -53,7 +59,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.13"
-    
+
+    - name: Install system dependencies for pybluez
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          bluetooth libbluetooth-dev
+
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
@@ -203,7 +215,13 @@ jobs:
           libgbm1 \
           libxss1 \
           libasound2t64
-    
+
+    - name: Install system dependencies for pybluez
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          bluetooth libbluetooth-dev
+
     - name: Wait for MariaDB to be ready
       run: |
         for i in {1..30}; do
