--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,16 +1,16 @@
 # Testing Requirements
-pytest>=7.4.0
-pytest-flask>=1.3.0
-pytest-mock>=3.11.0
-pytest-cov>=4.1.0
-pytest-rerunfailures>=16.0.0
-nox>=2023.4.22
-pytest-blockage>=0.2.4
+pytest==8.4.2
+pytest-flask==1.3.0
+pytest-mock==3.15.0
+pytest-cov==7.0.0
+pytest-rerunfailures==16.0.1
+nox
+pytest-blockage==0.2.4
 
 # E2E Testing
-playwright>=1.40.0
-pytest-playwright>=0.4.3
+playwright==1.55.0
+pytest-playwright==0.7.1
 
 # Additional test utilities
-factory-boy>=3.3.0
-faker>=19.3.0
+factory-boy==3.3.3
+faker==37.8.0
